java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint11.pass
package org.netbeans.test.java.hints;

import java.util.Comparator;

public class ImplementAbstractMethods11 {
    
    private void test() {
        a(new Comparator() {

            public int compare(Object arg0, Object arg1) {
                throw new UnsupportedOperationException("Not supported yet.");
            }
        });
    }
    
    private void a(Comparator c) {}
    
}
